{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 624,
  "lineage": "d438f559-3f24-c18d-25d1-fdf0b533852a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dev_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:356031655355:loadbalancer/app/dev-lb-tf/bd960c7ff60f33ca",
            "arn_suffix": "app/dev-lb-tf/bd960c7ff60f33ca",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-lb-tf-1082084233.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:356031655355:loadbalancer/app/dev-lb-tf/bd960c7ff60f33ca",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04f00169b9620d0b4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-030d7f851f2637a20"
              },
              {
                "subnet_id": "subnet-09dd2f840064c11a0"
              },
              {
                "subnet_id": "subnet-0ded2cd63ec14b06e"
              },
              {
                "subnet_id": "subnet-0ea29edf4dfafa268"
              }
            ],
            "subnets": [
              "subnet-030d7f851f2637a20",
              "subnet-09dd2f840064c11a0",
              "subnet-0ded2cd63ec14b06e",
              "subnet-0ea29edf4dfafa268"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "project-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "project-alb"
            },
            "vpc_id": "vpc-0514126d376d88d93",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.dev_public_sg",
            "module.dev-vpc.aws_subnet.public_subnets",
            "module.dev-vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dev_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:356031655355:listener/app/dev-lb-tf/bd960c7ff60f33ca/32a84f5f3dbf5bb9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:356031655355:targetgroup/dev-target-group/941cef193d45f968",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:356031655355:listener/app/dev-lb-tf/bd960c7ff60f33ca/32a84f5f3dbf5bb9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:356031655355:loadbalancer/app/dev-lb-tf/bd960c7ff60f33ca",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.dev_alb",
            "aws_lb_target_group.dev_target_group",
            "aws_security_group.dev_public_sg",
            "module.dev-vpc.aws_subnet.public_subnets",
            "module.dev-vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dev_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:356031655355:targetgroup/dev-target-group/941cef193d45f968",
            "arn_suffix": "targetgroup/dev-target-group/941cef193d45f968",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:356031655355:targetgroup/dev-target-group/941cef193d45f968",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0514126d376d88d93"
          },
          "dependencies": [
            "module.dev-vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:security-group/sg-04f00169b9620d0b4",
            "description": "Public sg to access the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f00169b9620d0b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "356031655355",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "my-public-sg",
              "Project": "project-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "my-public-sg",
              "Project": "project-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0514126d376d88d93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:internet-gateway/igw-08b4765e916b2178b",
            "id": "igw-08b4765e916b2178b",
            "owner_id": "356031655355",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "my-dev-igw",
              "Project": "project-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "my-dev-igw",
              "Project": "project-alb"
            },
            "vpc_id": "vpc-0514126d376d88d93"
          },
          "dependencies": [
            "module.dev-vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08b4765e916b2178b",
            "id": "r-rtb-0dfc91a00f73b11871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dfc91a00f73b1187",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-vpc.aws_internet_gateway.dev_igw",
            "module.dev-vpc.aws_route_table.dev_rt",
            "module.dev-vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:route-table/rtb-0dfc91a00f73b1187",
            "id": "rtb-0dfc91a00f73b1187",
            "owner_id": "356031655355",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "my-dev-rt",
              "Project": "project-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "my-dev-rt",
              "Project": "project-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0514126d376d88d93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7d3466a18995286",
            "route_table_id": "rtb-0dfc91a00f73b1187",
            "subnet_id": "subnet-09dd2f840064c11a0"
          },
          "dependencies": [
            "module.dev-vpc.aws_route_table.dev_rt",
            "module.dev-vpc.aws_subnet.public_subnets",
            "module.dev-vpc.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": "subnet_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dd7f7bf390886be",
            "route_table_id": "rtb-0dfc91a00f73b1187",
            "subnet_id": "subnet-0ea29edf4dfafa268"
          },
          "dependencies": [
            "module.dev-vpc.aws_route_table.dev_rt",
            "module.dev-vpc.aws_subnet.public_subnets",
            "module.dev-vpc.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": "subnet_c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063c5fd1b777c8e70",
            "route_table_id": "rtb-0dfc91a00f73b1187",
            "subnet_id": "subnet-030d7f851f2637a20"
          },
          "dependencies": [
            "module.dev-vpc.aws_route_table.dev_rt",
            "module.dev-vpc.aws_subnet.public_subnets",
            "module.dev-vpc.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": "subnet_d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a20a08fd994e150d",
            "route_table_id": "rtb-0dfc91a00f73b1187",
            "subnet_id": "subnet-0ded2cd63ec14b06e"
          },
          "dependencies": [
            "module.dev-vpc.aws_route_table.dev_rt",
            "module.dev-vpc.aws_subnet.public_subnets",
            "module.dev-vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:subnet/subnet-09dd2f840064c11a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dd2f840064c11a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "356031655355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "us-east-1a",
              "Project": "project-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "us-east-1a",
              "Project": "project-alb"
            },
            "vpc_id": "vpc-0514126d376d88d93"
          },
          "dependencies": [
            "module.dev-vpc.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": "subnet_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:subnet/subnet-0ea29edf4dfafa268",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea29edf4dfafa268",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "356031655355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "us-east-1b",
              "Project": "project-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "us-east-1b",
              "Project": "project-alb"
            },
            "vpc_id": "vpc-0514126d376d88d93"
          },
          "dependencies": [
            "module.dev-vpc.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": "subnet_c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:subnet/subnet-030d7f851f2637a20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.3.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030d7f851f2637a20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "356031655355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "us-east-1c",
              "Project": "project-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "us-east-1c",
              "Project": "project-alb"
            },
            "vpc_id": "vpc-0514126d376d88d93"
          },
          "dependencies": [
            "module.dev-vpc.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": "subnet_d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:subnet/subnet-0ded2cd63ec14b06e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.4.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ded2cd63ec14b06e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "356031655355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "us-east-1d",
              "Project": "project-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "us-east-1d",
              "Project": "project-alb"
            },
            "vpc_id": "vpc-0514126d376d88d93"
          },
          "dependencies": [
            "module.dev-vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:vpc/vpc-0514126d376d88d93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-005b6c083578bb17f",
            "default_route_table_id": "rtb-09caaad102444cb94",
            "default_security_group_id": "sg-01a009bb98680b4af",
            "dhcp_options_id": "dopt-09293ca0673bab044",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0514126d376d88d93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09caaad102444cb94",
            "owner_id": "356031655355",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "my-dev-vpc",
              "Project": "project-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "my-dev-vpc",
              "Project": "project-alb"
            }
          }
        }
      ]
    }
  ]
}